Textures on metaballs have different scale in Eevee and Cycles #67724

Closed
opened 2019-07-26 11:55:34 +02:00 by Jurek · 7 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.17

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-25 14:34, hash: cb10bd379b
Worked: (optional)

Short description of error
Textures on metaballs have different scale in Eevee and Cycles
Video describing the problem:
2019-07-26_11-53-09.mp4
blendfile:
texture bug report.blend

Exact steps for others to reproduce the error

  1. Open the blendfile.
  2. Compare the render preview in Cycles and Eevee
**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.17 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-25 14:34, hash: `cb10bd379b` Worked: (optional) **Short description of error** Textures on metaballs have different scale in Eevee and Cycles Video describing the problem: [2019-07-26_11-53-09.mp4](https://archive.blender.org/developer/F7629622/2019-07-26_11-53-09.mp4) blendfile: [texture bug report.blend](https://archive.blender.org/developer/F7629623/texture_bug_report.blend) **Exact steps for others to reproduce the error** 1. Open the blendfile. 2. Compare the render preview in Cycles and Eevee
Author

Added subscriber: @solartistic

Added subscriber: @solartistic

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Brecht Van Lommel was assigned by Germano Cavalcante 2019-07-26 15:49:01 +02:00

Cycles convert displists to mesh. What causes Texture Space to be calculated differently.

`Cycles` convert displists to mesh. What causes `Texture Space` to be calculated differently.

This issue was referenced by ee44f8a289

This issue was referenced by ee44f8a289a2fe06eda88303b9d76c9288541adc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @brunocb

Added subscriber: @brunocb

Problem still persists when using generated coordinates. Scale and location are a bit off.

When there are more than one metaball it gets worse.
I tested with voronoi texture with 0 randomness and noticed that:

  • when any metaball is moved or scaled, the first metaball doesn't change on Eevee, but the texture will move and scale across all metaballs on Cycles
  • only the first metaball affects rotation, both Cycles and Eevee
  • rotating a non spherical metaball will move textures on all metaballs on Cycles.
Problem still persists when using generated coordinates. Scale and location are a bit off. When there are more than one metaball it gets worse. I tested with voronoi texture with 0 randomness and noticed that: - when any metaball is moved or scaled, the first metaball doesn't change on Eevee, but the texture will move and scale across all metaballs on Cycles - only the first metaball affects rotation, both Cycles and Eevee - rotating a non spherical metaball will move textures on all metaballs on Cycles.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67724
No description provided.