Fix T67724: Cycles renders metaballs with wrong texture space